@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Much faster fl_read_image() for Windows (STR #2387).
 	- Added general Options dialog (STR #2471)
 	- Fixed Compiling with mingw-w64 (STR #2308).
 	- Fixed crashes when detecting illegal utf 8 sequences
